Version 6.15
todo
    - #67 Implement a destination that delivers to a local LMTP server
    - #71 allow "=" in ssl_ciphers to allow "ssl_ciphers = DEFAULT@SECLEVEL=1"
    - Added test folder: run tests with `make test`. Tests and fixes.

Version 6.14
14 December 2021
    - #64 getmail6: sometimes dies on running external filter program in version 6.13
    - #65 Wait much longer, and raise an exception when timeout (pull from ykasap/fix-timeout to solve #64)
    - #63 Trap exceptions caused by xoauth2 token expiration
    - #61 Refresh the OAuth access token when reconnecting (IMAP IDLE)

Version 6.13
07 December 2021
    - fix #59: Traceback while trying to reap child process
    - fix #60: Need to refresh the OAuth access token when reconnecting (IMAP IDLE)

Version 6.12
31 December 2020
    - fix #53: unclosed file warnings
    - fix #52: getmail seems to lose its child process and hangs forever (pull #54)
    - documentation improvements (#55, #56)

Version 6.11
09 December 2020
    - comply more closely with the XDG basedir specification: allow an
      unset XDG_CONFIG_HOME environment variable.
    - Simplify the documentation around the location of the configuration directory.
    - fix #49: "'utf-8' codec can't decode" for mbox

Version 6.10
28 November 2020
    - fix #48: handle Header in address_no_brackets using Header.__str__

Version 6.9
02 November 2020
    - fix python 3.9 issues #42 #44
    - fix regex warning #45
    - add usage of Python keyring package in addition to gnomekeyring (#43)

Version 6.8
07 October 2020
    - fix #37: update copyright date and notices
    - fix #39: Slow mail retrieval
    - pull #40: fix UnboundLocalError when socket.error inside POP3_SSL_EXTENDED

Version 6.7
01 September 2020
    - use $XDG_CONFIG_HOME if defined
    - fix pip install (doc/man below site-packages)
    - fix #34: quote only for select

Version 6.6
29 August 2020
    - fix #34: quote mailbox if necessary